<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.alctictactoe.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="134dp"
        android:gravity="center"
        android:text="@string/game_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="36sp" />

    <Button
        android:id="@+id/singleplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/playerselectbutton"
        android:onClick="playSinglePGame"
        android:padding="10dp"
        android:text="@string/player_option_2"
        android:textColor="#ffffff"
        android:textSize="27sp" />

    <Button
        android:id="@+id/twoplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/singleplayer"
        android:layout_centerHorizontal="true"
        android:background="@drawable/playerselectbutton"
        android:onClick="playTwoPGame"
        android:padding="10dp"
        android:text="@string/player_option_1"
        android:textColor="#ffffff"
        android:textSize="27sp" />

</RelativeLayout>