<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.alctictactoe.SeriesResult">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.7"
        android:background="#FF0929F2"
        android:onClick="onClickContinue"
        android:padding="4dp"
        android:text="@string/continue_button_text"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/result_text"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/cont_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toplay"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:background="@drawable/playerselectbutton"
            android:onClick="onClickContinue"
            android:padding="4dp"
            android:text="@string/continue_button_text"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/p1name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/player_1_default_name"
                android:textAlignment="center"
                android:textColor="#1680cf"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/p1wins"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/initial_games_played_0"
                android:textAlignment="center"
                android:textColor="#87CCFF"
                android:textSize="50sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/draw12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/player_1_2_draw"
                android:textAlignment="center"
                android:textColor="#1680cf"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/draws"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/initial_games_played_0"
                android:textAlignment="center"
                android:textColor="#87CCFF"
                android:textSize="50sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/p2name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/player_2_default_name"
                android:textAlignment="center"
                android:textColor="#1680cf"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/p2wins"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/initial_games_played_0"
                android:textAlignment="center"
                android:textColor="#87CCFF"
                android:textSize="50sp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>