<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    tools:context="com.example.android.alctictactoe.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"

        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="com.example.android.lctictactoe.PlayerName">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Enter your name:"
            android:textColor="#fff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/player1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:backgroundTint="#1680cf"
            android:hint="Your name"
            android:textColor="#87CCFF"
            android:textColorHint="#1680cf" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/ask_numofgames_text"
            android:textColor="#fff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/numberOfG"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:backgroundTint="#1680cf"
            android:hint="@string/number_of_games_hint"
            android:inputType="number"
            android:textColor="#87CCFF"
            android:textColorHint="#1680cf"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:background="#f60718"
            android:onClick="submitName"
            android:text="@string/playernames_submit_button"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:background="@android:color/transparent" />


    </LinearLayout>
</ScrollView>

