<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.alctictactoe.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/game_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.3"
            android:text="@string/default_player_turn_text"
            android:textAlignment="center"
            android:textColor="#87CCFF"
            android:textSize="22sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/res"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_marginBottom="16dp"
                android:layout_marginLeft="44dp"
                android:layout_marginStart="44dp"
                android:background="@drawable/playerselectbutton"
                android:onClick="newGame"
                android:padding="4dp"
                android:text="@string/restart_game_button_text"
                android:textColor="#fff"

                />

            <Button
                android:id="@+id/restartmatch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_marginBottom="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/playerselectbutton"
                android:onClick="newMatch"
                android:padding="4dp"
                android:text="@string/restart_match_button_text"
                android:textColor="#fff"


                />
        </LinearLayout>

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="3"

            >

            <Button
                android:id="@+id/a11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#87CCFF"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="50sp"

                />

            <Button
                android:id="@+id/a12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#87CCFF"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="50sp" />

            <Button
                android:id="@+id/a13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#87CCFF"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="50sp" />

            <Button
                android:id="@+id/a21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#87CCFF"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="50sp" />

            <Button
                android:id="@+id/a22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#87CCFF"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="50sp" />

            <Button
                android:id="@+id/a23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#87CCFF"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="50sp" />


            <Button
                android:id="@+id/a31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#87CCFF"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="50sp" />


            <Button
                android:id="@+id/a32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#87CCFF"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="50sp" />

            <Button
                android:id="@+id/a33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"

                android:background="#87CCFF"
                android:onClick="playmove"
                android:text=" "
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="50sp" />

        </GridLayout>

    </LinearLayout>

</ScrollView>